# online_courses

./: .env.example  Dockerfile  README.md  course_fixture.json  docker-compose.yml  lessons_fixture.json  payments_fixture.json  pyproject.toml  requirements.txt  users_fixture.json
config/: settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1df033120bbcc412___init___py.html  z_1df033120bbcc412_add_payments_py.html  z_1df033120bbcc412_add_users_py.html  z_1df033120bbcc412_create_moderator_py.html  z_1df033120bbcc412_csu_py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_2484c951eaf88dd9_0001_initial_py.html  z_2484c951eaf88dd9_0002_alter_lesson_course_py.html  z_2484c951eaf88dd9_0003_course_owner_lesson_owner_py.html  z_2484c951eaf88dd9_0004_alter_course_owner_alter_lesson_owner_py.html  z_2484c951eaf88dd9_0005_course_is_subscribe_alter_lesson_video_link_and_more_py.html  z_2484c951eaf88dd9_0006_alter_subscribe_course_py.html  z_2484c951eaf88dd9___init___py.html  z_5e851a3861c0272e___init___py.html  z_8b562f3fe71efc7d___init___py.html  z_ceb09f74da890424___init___py.html  z_ceb09f74da890424_add_data_py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  (+17 more)
materials/: models.py  (+6 more)
(+31 files in other folders)
