[tool.poetry]
name = "online-courses"
version = "0.1.0"
description = ""
authors = ["Petr Maev <petr.maev94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
django = "^5.2.3"
djangorestframework = "^3.16.0"
pillow = "^11.2.1"
ipython = "^9.3.0"
psycopg2 = "^2.9.10"
python-dotenv = "^1.1.0"
django-filter = "^25.1"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# Максимальная длина строки
line_length = 119
